# monkey-rust

./: Cargo.toml  README.md  fibonacci.mnk
compiler/: Cargo.toml
compiler/src/: code.rs  err.rs  lib.rs  main.rs  utils.rs
compiler/src/bench/: main.rs
compiler/src/compiler/: compiler.rs  symbol_table.rs  test.rs
compiler/src/fib/: main.rs
compiler/src/vm/: test.rs  vm.rs
interpreter/: Cargo.toml
interpreter/src/: format.rs  lib.rs  main.rs  repl.rs  test.rs
interpreter/src/bench/: main.rs
interpreter/src/eval/: builtins.rs  environment.rs  evaluator.rs  object.rs
interpreter/src/lexer/: lexer.rs  token.rs
interpreter/src/parser/: ast.rs
src/: ast.rs  builtins.rs  err.rs  evaluator.rs  format.rs  lexer.rs  main.rs  object.rs  parser.rs  repl.rs  test.rs  token.rs
src/ast/: ast.rs  err.rs  test.rs
src/eval/: builtins.rs  environment.rs  evaluator.rs  object.rs
src/lexer/: lexer.rs  token.rs
src/object/: environment.rs  object.rs
src/parser/: ast.rs  parser.rs
src/token/: token.rs
