[package]
name = "compiler"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interpreter = {path = "../interpreter"}
lazy_static = "1.4.0"
num_enum = "0.4.2"
fnv = "1.0.3"
once_cell = "1.3.1"

[lib]
name = "compiler"
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/bench/main.rs"

[[bin]]
name = "fib"
path = "src/fib/main.rs"