[package]
name = "interpreter"
version = "0.1.0"
authors = ["ritchie46 <ritchie46@gmail.com>"]
edition = "2018"
default-run = "interpreter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
whoami = "0.7"
fnv = "1.0.3"

[lib]
name = "monkey"
path = "src/lib.rs"

[[bin]]
name = "interpreter"
path = "src/main.rs"


[[bin]]
name = "bench"
path = "src/bench/main.rs"